編修food資料夾

--- a/s20250424/food/f1.html
+++ b/s20250424/food/f1.html
@@ -11,7 +11,7 @@
     <h1>泰山必吃五大美食</h1>
     <h2>泰山米其林義大利麵</h2>
 
-    <img src="../images/food1.png" width="50%" alt="">
+    <img src="./images/food1.png" width="50%" alt="">
 
 </body>
 
