--- a/s20250424/food/f2.html
+++ b/s20250424/food/f2.html
@@ -11,7 +11,7 @@
     <h1>泰山必吃五大美食</h1>
     <h2>泰山難買到石頭玉米</h2>
 
-    <img src="../images/food2.jpg" width="50%" alt="">
+    <img src="./images/food2.jpg" width="50%" alt="">
 
 </body>
 
