--- a/s20250424/food/f4.html
+++ b/s20250424/food/f4.html
@@ -10,7 +10,7 @@
 <body>
     <h1>泰山必吃五大美食</h1>
     <h2>泰山30年久王家豆花</h2>
-    <img src="../images/food4.jpg" width="50%" alt="">
+    <img src="./images/food4.jpg" width="50%" alt="">
 
 
 </body>
