--- a/s20250424/food/f5.html
+++ b/s20250424/food/f5.html
@@ -10,7 +10,9 @@
 <body>
     <h1>泰山必吃五大美食</h1>
     <h2>泰山銅板價牛肉湯麵</h2>
-    <img src="../images/food5.jpg" width="50%" alt="">
+    <img src="./images/food5.jpg" width="50%" alt="">
+    <img src="./images/food5-1.jpg" width="50%" alt="">
+    <img src="./images/food5-2.jpg" width="50%" alt="">
 
 
 </body>
