--- a/s20250424/food/f3.html
+++ b/s20250424/food/f3.html
@@ -10,7 +10,7 @@
 <body>
     <h1>泰山必吃五大美食</h1>
     <h2>泰山古早味雞絲麵線</h2>
-    <img src="../images/food3.jpg" width="50%" alt="">
+    <img src="./images/food3.jpg" width="50%" alt="">
 
 </body>
 
